--- a/index.html
+++ b/index.html
@@ -2,8 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" 
+      type="image/png" 
+      href="https://icons.iconarchive.com/icons/google/noto-emoji-smileys/64/10101-alien-icon.png" 
+      />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>💘 United jobs 💘</title>
+    <title> United jobs 💘</title>
   </head>
   <body>
     <div id="root"></div>
